--- a/app/src/main/res/layout/activity_ride_page.xml
+++ b/app/src/main/res/layout/activity_ride_page.xml
@@ -9,15 +9,16 @@
 
     <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="368dp"
-            android:layout_height="150dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-            android:id="@+id/linearLayout">
+            android:id="@+id/linearLayout"
+            android:gravity="center">
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" android:layout_weight="20"
+                android:layout_height="wrap_content" android:layout_weight="20"
                 android:gravity="center">
             <TextView
                     android:text="Name"
@@ -47,14 +48,15 @@
         <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" app:srcCompat="@drawable/example_profile_photo"
-                android:id="@+id/imageView" android:layout_weight="80"/>
+                android:id="@+id/imageView" android:layout_weight="80" android:adjustViewBounds="true"/>
     </LinearLayout>
     <android.support.constraint.ConstraintLayout
-            android:layout_width="368dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content" android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/constraintLayout">
+            android:id="@+id/constraintLayout" android:layout_marginBottom="28dp"
+            app:layout_constraintBottom_toTopOf="@+id/ride_page_recyclerview">
 
         <TextView
                 android:text="Details:"
