Cleaner code and refactorings to improve small things.
Rename NewRiderActivity to RideCreationActivity
Rename RidesListActivity to EventRidesActivity
Move and combine IntentExtraKeys into a package-level class
Add getThisUser() function that should be used to get the user of the person using the app (mocked right now)

--- a/app/src/main/res/layout/activity_eventrides.xml
+++ b/app/src/main/res/layout/activity_eventrides.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".RidesListActivity">
+    tools:context=".EventRidesActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
@@ -34,7 +34,7 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_rideslist" />
+    <include layout="@layout/content_eventrides" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
