--- a/app/src/main/res/layout/content_eventrides.xml
+++ b/app/src/main/res/layout/content_eventrides.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_rideslist"
+    tools:showIn="@layout/activity_eventrides"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RidesListActivity">
+    tools:context=".EventRidesActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rides_list_recycler_view"
