--- a/app/src/main/res/layout/activity_ride_page.xml
+++ b/app/src/main/res/layout/activity_ride_page.xml
@@ -1,72 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".RidePageActivity">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".RidePageActivity">
 
     <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
-            android:id="@+id/linearLayout"
-            android:gravity="center">
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <LinearLayout
-                android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="20"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/driverNamePage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:layout_weight="20"
-                android:gravity="center">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:text="Name"
+                android:textColor="@color/profileNameColor"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
             <TextView
-                    android:text="Name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/driverNamePage"
-                    android:layout_marginBottom="4dp" android:textSize="16sp"
-                    android:textColor="@color/profileNameColor" android:textStyle="bold"/>
+                android:id="@+id/carModel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:text="Model" />
+
             <TextView
-                    android:text="Model"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/carModel" android:layout_marginBottom="4dp"/>
+                android:id="@+id/carColor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:text="Color" />
+
             <TextView
-                    android:text="Color"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/carColor" android:layout_marginBottom="4dp"/>
+                android:id="@+id/departureTimePage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:text="00:00" />
+
             <TextView
-                    android:text="00:00"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/departureTimePage"
-                    android:layout_marginBottom="4dp"/>
-            <TextView
-                    android:text="Origin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/originLocation"
-                    android:layout_marginBottom="4dp"/>
+                android:id="@+id/originLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:text="Origin" />
         </LinearLayout>
+
         <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" app:srcCompat="@drawable/example_profile_photo"
-                android:id="@+id/imageView" android:layout_weight="80" android:adjustViewBounds="true"/>
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="80"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/example_profile_photo" />
     </LinearLayout>
+
     <android.support.constraint.ConstraintLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/constraintLayout" android:layout_marginBottom="28dp"
-            app:layout_constraintBottom_toTopOf="@+id/ride_page_recyclerview">
+        android:id="@+id/constraintLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="28dp"
+        app:layout_constraintBottom_toTopOf="@+id/ride_page_recyclerview"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <TextView
-                android:text="Details:"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/details"/>
+            android:id="@+id/details"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Details:" />
     </android.support.constraint.ConstraintLayout>
+
     <android.support.v7.widget.RecyclerView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" android:layout_marginTop="28dp"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/ride_page_recyclerview" app:layout_constraintHorizontal_bias="0.0"/>
+        android:id="@+id/ride_page_recyclerview"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 </android.support.constraint.ConstraintLayout>
