--- a/app/src/main/res/layout/content_eventrides.xml
+++ b/app/src/main/res/layout/content_eventrides.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_eventrides"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EventRidesActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".EventRidesActivity"
+    tools:showIn="@layout/activity_eventrides">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rides_list_recycler_view"
-        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
 
 </android.support.v4.widget.NestedScrollView>
