--- a/app/src/main/res/menu/menu_eventrides.xml
+++ b/app/src/main/res/menu/menu_eventrides.xml
@@ -1,13 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".EventRidesActivity">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
-    <item android:id="@+id/action_open_event_on_facebook"
-          android:title="@string/action_open_event_on_facebook"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="100"
+        android:title="@string/action_settings"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_open_event_on_facebook"
+        android:orderInCategory="100"
+        android:title="@string/action_open_event_on_facebook"
+        app:showAsAction="never" />
 </menu>
