--- a/app/src/main/res/layout/card_ride_page.xml
+++ b/app/src/main/res/layout/card_ride_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -27,19 +28,19 @@
                 android:id="@+id/passengerName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Name" />
+                android:text="@string/passenger_name" />
 
             <TextView
                 android:id="@+id/pickupSpot"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Spot" />
+                android:text="@string/passenger_pickup_spot" />
 
             <TextView
                 android:id="@+id/pickupTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="00:00" />
+                android:text="@string/passenger_pickup_time_default_value" />
         </LinearLayout>
 
         <ImageView
@@ -47,6 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="90"
-            app:srcCompat="@drawable/ic_face_black_24dp" />
+            app:srcCompat="@drawable/ic_face_black_24dp"
+            tools:ignore="ContentDescription" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
