--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -9,13 +9,32 @@
     tools:showIn="@layout/activity_main">
 
     <android.widget.Button
-        android:id="@+id/button_rides_list"
+        android:id="@+id/temp_button_rides_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/button_label_open_eventridesactivity" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/temp_button_label_open_eventridesactivity"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <android.widget.Button
+        android:id="@+id/temp_button_switch_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/temp_button_label_switch_user"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/temp_button_rides_list" />
 
 
     <TextView
+        android:id="@+id/temp_main_activity_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
