--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/log_out_facebook"
+        android:orderInCategory="200"
+        android:title="@string/facebook_log_out"
+        app:showAsAction="never" />
+
 </menu>
