--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,8 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MapsActivity" />
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                 android:id="@+id/fab_coordinator_layout"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent"
+                                                 android:background="#EEEEEE"
+                                                 android:fitsSystemWindows="true">
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:id="@+id/map"
+              android:name="com.google.android.gms.maps.SupportMapFragment"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              tools:context=".MapsActivity">
+    </fragment>
+
+
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_pin_or_unpin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/fab_margin"
+            android:layout_marginStart="@dimen/fab_margin"
+            android:layout_marginEnd="@dimen/fab_margin"
+            android:tint="@android:color/black"
+            app:backgroundTint="@android:color/white"
+            app:layout_anchorGravity="right|bottom"
+            app:srcCompat="@drawable/ic_pin_drop_black_24dp"
+            app:layout_anchor="@+id/map"/>
+
+
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_confirm_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:tint="@android:color/white"
+            app:backgroundTint="@color/confirmation"
+            app:layout_anchorGravity="top|center"
+            app:srcCompat="@drawable/ic_done_black_24dp"
+            android:layout_gravity="top|center"
+            app:useCompatPadding="true"
+            app:layout_anchor="@+id/fab_pin_or_unpin"/>
+
+</android.support.design.widget.CoordinatorLayout>
