--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="errorRed">#B5042A</color>
     <color name="title_light">#beffffff</color>
     <color name="firstScreen">#f0c47d</color>
+    <color name="confirmation">#04B518</color>
     <!--template colors-->
 
 </resources>
